--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.3.7",
+    "inquirer": "8.2.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
